Import of SMYLERS/GraphViz-DBI-FromSchema-0.5 from CPAN.
gitpan-cpan-distribution: GraphViz-DBI-FromSchema
gitpan-cpan-version:      0.5
gitpan-cpan-path:         SMYLERS/GraphViz-DBI-FromSchema-0.5.tar.gz
gitpan-cpan-author:       SMYLERS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -7,3 +7,8 @@
 == 0.02 ==
 
 * ooops: correctly declare dependency on GraphViz::DBI
+
+== 0.5 ==
+
+* Works with Postgres
+* schema_diagram command
